Kube-manifests/_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emongo-ui
  labels:
    app: emongo-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emongo-ui
  template:
    metadata:
      name: emongo-ui
      labels:
        app: emongo-ui
    spec:
      containers:
        - name: emongo-ui
          image: mongo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: emongo-port
              containerPort: 27017
      restartPolicy: Always
