Kube-manifests/client_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-ui
spec:
  selector:
    app: client-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
