Kube-manifests/emongo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: emongo-ui
spec:
  selector:
    app: emongo-ui
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
