Kube-manifests/api_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: emart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-ui
                port:
                  number: 8080
